--- a/stock-service/src/main/resources/static/map.html
+++ b/stock-service/src/main/resources/static/map.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="map"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-dht1CwgRb5hN-MSL8Lo7xzStLo-BEL0"></script>
 <script src="app.js"></script>
 </body>
 </html>
